<resources>
    <string name="app_name">My Sport Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="moves_title">حرکات</string>
    <string name="add_move_title">حرکت جدید</string>
    <string name="routines_title">روتین ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_title">شروع سریع</string>
    <string name="sets_title">تعداد ست ها</string>
    <string name="setsText">تعداد ست ها</string>
    <string name="setsAddBottomDescription">اضافه کردن به ست ها</string>
    <string name="setsMinusBottomDescription">کم کردن ست ها</string>
    <string name="workText">زمان تمرین</string>
    <string name="restText">زمان استراحت</string>
    <string name="saveText">زخیره</string>
    <string name="quickStartText">شروع</string>
    <string name="pause_text">توقف</string>
    <string name="exit_text">خروج</string>
    <string name="work">تمرین</string>
    <string name="sets_default">3</string>
    <string name="work_minutes_default">01</string>
    <string name="rest_minutes_default">00</string>
    <string name="rest_seconds_default">30</string>
    <string name="colon">:</string>
    <string name="work_seconds_default">30</string>
    <string name="notification_state_default">وضعیت</string>
    <string name="notification_sets_default">10</string>
    <string name="notification_time_default">01:00</string>
    <string name="notification_button_default">pause and resume button inside notification</string>
</resources>