<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    >


    <TextView
        android:id="@+id/notificationStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/notification_state_default"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/notificationSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_sets_default"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/notificationTimeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_time_default"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/notificationPauseButton"
        android:src="@drawable/ic_baseline_pause_24"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/notification_button_default"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true" />

</RelativeLayout>